update jdk, python